testsuite/tests/checks/access_to_local_objects/test.out
access_to_local_objects.adb:8:32: error: access_to_local_objects - rule violation
8 |        Var2 :         Int_A := Var1'Access;  --  FLAG
  |                                ^^^^^^^^^^^ 

